--- a/demo_notebooks/lecture_4/machine_learning_model_zoo.ipynb
+++ b/demo_notebooks/lecture_4/machine_learning_model_zoo.ipynb
@@ -220,13 +220,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'model_selection'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-8290f3bb5e10>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmodel_selection\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[1;31m#from sklearn.model_selection import cross_val_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'model_selection'"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.model_selection import cross_val_score"
+    "from sklearn import model_selection\n",
+    "#from sklearn.model_selection import cross_val_score"
    ]
   },
   {
@@ -247,7 +260,7 @@
     "def testClass(model,x,y):\n",
     "    \"\"\"Test a model.\"\"\"\n",
     "    # get CV scores\n",
-    "    acc = cross_val_score(model, x, y, cv=5)\n",
+    "    acc = cross_val_score(model, x, y, cv=5) #5 felé vágjuk az adatsort a modellek értékeléséhez, mindegyiken betanítjuk\n",
     "    # eval them\n",
     "    print 'Accuracy: %.2f +/- %.2f' % (100*mean(acc),100*std(acc))"
    ]
@@ -512,6 +525,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Label: Higgs-bozon-e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " Create X,Y matrices."
    ]
   },
@@ -608,6 +628,17 @@
    ],
    "source": [
     "testClass(tree.DecisionTreeClassifier(), x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Legjobb vágás, ami a legjobban csökkenti a kategorikus cross-entrópiát\n",
+    "\n",
+    "pl. Titanic: gyerek/felnőtt, nő/férfi\n",
+    "\n",
+    "vége: minden levélben kevés adat (az 1-1 már nagyon túltanulás)"
    ]
   },
   {
@@ -1034,6 +1065,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tesztadathalmazon nagyon béna a korreláció, a tanulásnál túlillesztés történt.\n",
+    "\n",
+    "Több a változó, mint az adatpont :("
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
@@ -1344,22 +1384,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
