--- a/demo_notebooks/lecture_4/machine_learning_model_zoo.ipynb
+++ b/demo_notebooks/lecture_4/machine_learning_model_zoo.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -232,14 +232,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-8290f3bb5e10>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmodel_selection\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[1;31m#from sklearn.model_selection import cross_val_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-11-c1243fa84f21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmodel_selection\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcross_val_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mImportError\u001b[0m: cannot import name 'model_selection'"
      ]
     }
    ],
    "source": [
     "from sklearn import model_selection\n",
-    "#from sklearn.model_selection import cross_val_score"
+    "from sklearn.model_selection import cross_val_score"
    ]
   },
   {
@@ -251,9 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
     "    # get CV scores\n",
     "    acc = cross_val_score(model, x, y, cv=5) #5 felé vágjuk az adatsort a modellek értékeléséhez, mindegyiken betanítjuk\n",
     "    # eval them\n",
-    "    print 'Accuracy: %.2f +/- %.2f' % (100*mean(acc),100*std(acc))"
+    "    print('Accuracy: %.2f +/- %.2f %', 100*mean(acc), 100*std(acc))"
    ]
   },
   {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -510,14 +510,14 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cls_data = pd.read_csv('higgs.csv.gz')  # load it\n",
-    "print cls_data.shape\n",
+    "print(cls_data.shape)\n",
     "cls_data.head()  # peek"
    ]
   },
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -545,6 +545,83 @@
    "source": [
     "x = cls_data.drop(['Label'],axis=1).values\n",
     "y = cls_data.Label.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.38470000e+02  5.16550000e+01  9.78270000e+01 ... -2.47500000e+00\n",
+      "   1.13497000e+02  8.14480399e-04]\n",
+      " [ 1.60937000e+02  6.87680000e+01  1.03235000e+02 ... -9.99000000e+02\n",
+      "   4.62260000e+01  6.81041907e-01]\n",
+      " [-9.99000000e+02  1.62172000e+02  1.25953000e+02 ... -9.99000000e+02\n",
+      "   4.42510000e+01  7.15742006e-01]\n",
+      " ...\n",
+      " [ 1.10956000e+02  1.29360000e+01  8.43610000e+01 ...  1.70900000e+00\n",
+      "   2.21210000e+02  2.17574937e-02]\n",
+      " [ 1.03270000e+02  3.56240000e+01  7.19440000e+01 ... -9.99000000e+02\n",
+      "   0.00000000e+00  5.92930892e-01]\n",
+      " [ 1.15644000e+02  3.07150000e+01  8.30970000e+01 ... -9.99000000e+02\n",
+      "   0.00000000e+00  4.18760425e-01]]\n",
+      "[1 0 0 ... 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 31)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000,)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
    ]
   },
   {
